kubemigrate/land-migrate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: ServiceAccount
metadata:
  creationTimestamp: null
  name: kubecred
  namespace: landing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: landing
  name: landing
  namespace: landing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: landing
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: landing
    spec:
      serviceAccountName: kubecred
      containers:
      - image: registry.ocp4.example.com:8443/elastois:v1
        name: redhat-landing
        ports:
        - containerPort: 8080
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-09-17T15:48:24Z"
  name: landing
  namespace: landing
  resourceVersion: "241755"
  uid: 431d3ce2-7c40-4d04-aa28-fda16c2dec03
spec:
  clusterIP: 172.30.175.52
  clusterIPs:
  - 172.30.175.52
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: landing
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: landing
spec:
  rules:
    - host: landing.apps.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 8080
